Change word-break to normal on ip6 to avoid wrapping IPv6 addresses. #543

--- a/peeringdb_server/static/site.css
+++ b/peeringdb_server/static/site.css
@@ -1234,7 +1234,7 @@ span.inline.delimited input {
 .ip6,
 div[name=ipaddr6],
 div[data-edit-name=ipaddr6]
-{ word-break: break-all; }
+{ word-break: normal; }
 
 .ixf-log {
   max-height: 400px;
